--- a/DeSS_T_Frontend/package.json
+++ b/DeSS_T_Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "exceljs": "^4.4.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
