--- a/DeSS_T_Backend-go/Dockerfile
+++ b/DeSS_T_Backend-go/Dockerfile
@@ -1,14 +1,19 @@
-FROM golang:1.23-alpine AS build
+FROM golang:1.24 AS build
 
 WORKDIR /app
+
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN go build -o main .
 
-FROM alpine
+# STATIC BUILD (สำคัญมาก)
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main .
+
+FROM scratch
+
 WORKDIR /app
 COPY --from=build /app/main .
+
 EXPOSE 8080
-CMD ["./main"]
+ENTRYPOINT ["./main"]
