--- a/DeSS_T_Frontend/package.json
+++ b/DeSS_T_Frontend/package.json
@@ -14,6 +14,7 @@
     "exceljs": "^4.4.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.6"
@@ -22,6 +23,7 @@
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.22",
