--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,27 +17,18 @@ services:
     depends_on:
       - backend-python
       - postgres
-      - mongo
     environment:
       POSTGRES_HOST: postgres
       POSTGRES_USER: DeSS_T
       POSTGRES_PASSWORD: DeSS_T_491
       POSTGRES_DB: dess_db
-      MONGO_URI: mongodb://DeSS_T:DeSS_T_491@mongo:27017/dess_db?authSource=admin
 
   backend-python:
     image: paweennutpuyfai/dess-t-python:2.0
     ports:
       - "5000:5000"
     depends_on:
-      - postgres
-      - mongo
-    environment:
-      POSTGRES_HOST: postgres
-      POSTGRES_USER: DeSS_T
-      POSTGRES_PASSWORD: DeSS_T_491
-      POSTGRES_DB: dess_db
-      MONGO_URI: mongodb://DeSS_T:DeSS_T_491@mongo:27017/dess_db?authSource=admin
+      - backend-go
 
   postgres:
     image: postgis/postgis:15-3.4
@@ -54,19 +45,5 @@ services:
     volumes:
       - DeSS_T:/var/lib/postgresql/data
 
-  mongo:
-    image: mongo:7
-    container_name: DeSS_T_mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: DeSS_T
-      MONGO_INITDB_ROOT_PASSWORD: DeSS_T_491
-      MONGO_INITDB_DATABASE: dess_db
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
-
 volumes:
   DeSS_T:
-  mongo_data:
