--- a/DeSS_T_Frontend/package.json
+++ b/DeSS_T_Frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@types/react-router-dom": "^5.3.3",
     "exceljs": "^4.4.0",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-color": "^2.19.3",
