--- a/DeSS_T_Frontend/package.json
+++ b/DeSS_T_Frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@types/leaflet.heat": "^0.2.5",
     "@types/react-router-dom": "^5.3.3",
     "exceljs": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "react": "^19.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
