--- a/DeSS_T_Backend-go/Dockerfile
+++ b/DeSS_T_Backend-go/Dockerfile
@@ -1,19 +1,21 @@
-FROM golang:1.24 AS build
+FROM golang:1.24-alpine AS build
 
 WORKDIR /app
+
+RUN apk add --no-cache ca-certificates
 
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
 
-# STATIC BUILD (สำคัญมาก)
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main .
 
 FROM scratch
 
 WORKDIR /app
 COPY --from=build /app/main .
+COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 EXPOSE 8080
 ENTRYPOINT ["./main"]
