--- a/DeSS_T_Frontend/package.json
+++ b/DeSS_T_Frontend/package.json
@@ -14,6 +14,7 @@
     "@types/leaflet.heat": "^0.2.5",
     "@types/react-router-dom": "^5.3.3",
     "exceljs": "^4.4.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-color": "^3.0.13",
