--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   frontend:
-    image: paweennutpuyfai/dess-t-frontend:6.3
+    image: paweennutpuyfai/dess-t-frontend:7.0
+    env_file:
+      - .env
     ports:
       - "3000:80"
     depends_on:
@@ -9,7 +11,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   backend-go:
-    image: paweennutpuyfai/dess-t-go:6.3
+    image: paweennutpuyfai/dess-t-go:7.0
     env_file:
       - .env
     ports:
