--- a/DeSS_T_Backend-go/Dockerfile
+++ b/DeSS_T_Backend-go/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.24-alpine AS build
 
 WORKDIR /app
 
-RUN apk add --no-cache ca-certificates
+RUN apk add --no-cache ca-certificates git
 
 COPY go.mod go.sum ./
 RUN go mod download
