--- a/DeSS_T_Frontend/Dockerfile
+++ b/DeSS_T_Frontend/Dockerfile
@@ -1,10 +1,16 @@
 # --- Build stage ---
 FROM node:20 AS build
 WORKDIR /app
+
+ARG VITE_GOOGLE_CLIENT_ID
+
+ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
-RUN npm run build   # generates /dist
+RUN npm run build
 
 # --- Run stage ---
 FROM nginx:alpine
