--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   frontend:
-    image: paweennutpuyfai/dess-t-frontend:7.0
+    image: paweennutpuyfai/dess-t-frontend:8.1
     env_file:
       - .env
     ports:
@@ -11,7 +11,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   backend-go:
-    image: paweennutpuyfai/dess-t-go:7.0
+    image: paweennutpuyfai/dess-t-go:8.4
     env_file:
       - .env
     ports:
@@ -25,10 +25,11 @@ services:
       DB_HOST: postgres
       UPLOAD_DIR: /uploads
     volumes:
+      - ./data:/data
       - ./data/uploads:/uploads
 
   backend-python:
-    image: paweennutpuyfai/dess-t-python:6.0
+    image: paweennutpuyfai/dess-t-python:8.1
     ports:
       - "5000:5000"
 
